--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.19.3",
     "axios": "^0.18.0",
     "d3": "^5.9.2",
     "node-sass": "^4.12.0",
