--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "rain-or-shine",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://tywi6665.github.io/Rain-or-Shine",
   "dependencies": {
     "antd": "^3.19.3",
     "axios": "^0.18.0",
     "d3": "^5.9.2",
+    "gh-pages": "^2.0.1",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-browser-hooks": "^2.2.3",
@@ -14,6 +16,8 @@
     "weather-underground-icons": "^1.0.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
